--- a/MarketSplash_ Financial Terms Dictionary_files/style.css
+++ b/MarketSplash_ Financial Terms Dictionary_files/style.css
@@ -575,15 +575,17 @@ form.hero-search input {
     margin-bottom: 30px;
     background-color: #f5f5f6;
     justify-content: center;
+    transform: translateZ(0);
 }
-
-.alphabet-list.sticky {
-    position: fixed;
-    top: 0;
-    z-index: 999;
-    width: 100%;
-    left: 0;
-    right: 0;
+/* iOS Safari specific fixes for a fixed sidebar */
+@supports (-webkit-overflow-scrolling: touch) {
+    .alphabet-list.sticky {
+        position: fixed;
+        position: -webkit-fixed;
+        /* Old syntax for iOS 5 and earlier */
+        top: 0;
+        z-index: 999;
+    }
 }
 
 .alphabet-list-item {
