--- a/MarketSplash_ Financial Terms Dictionary_files/style.css
+++ b/MarketSplash_ Financial Terms Dictionary_files/style.css
@@ -577,6 +577,28 @@ form.hero-search input {
     justify-content: center;
     transform: translateZ(0);
 }
+
+
+.alphabet-list.sticky {
+    position: fixed;
+    top: 0;
+    z-index: 999;
+    width: 100%;
+    left: 0;
+    right: 0;
+    transform: translateZ(0);
+}
+
+/* iOS Safari specific fixes for a fixed sidebar */
+@supports (-webkit-overflow-scrolling: touch) {
+    .alphabet-list.sticky {
+        position: fixed;
+        position: -webkit-fixed;
+        /* Old syntax for iOS 5 and earlier */
+        top: 0;
+        z-index: 999;
+    }
+}
 /* iOS Safari specific fixes for a fixed sidebar */
 
 .alphabet-list-item {
