--- a/MarketSplash_ Financial Terms Dictionary_files/style.css
+++ b/MarketSplash_ Financial Terms Dictionary_files/style.css
@@ -575,7 +575,6 @@ form.hero-search input {
     margin-bottom: 30px;
     background-color: #f5f5f6;
     justify-content: center;
-    transform: translateZ(0);
 }
 
 
@@ -586,7 +585,6 @@ form.hero-search input {
     width: 100%;
     left: 0;
     right: 0;
-    transform: translateZ(0);
 }
 
 /* iOS Safari specific fixes for a fixed sidebar */
@@ -597,6 +595,10 @@ form.hero-search input {
         /* Old syntax for iOS 5 and earlier */
         top: 0;
         z-index: 999;
+        
+    width: 100%;
+    left: 0;
+    right: 0;Ï
     }
 }
 /* iOS Safari specific fixes for a fixed sidebar */
