--- a/MarketSplash_ Financial Terms Dictionary_files/style.css
+++ b/MarketSplash_ Financial Terms Dictionary_files/style.css
@@ -1,3 +1,7 @@
+body {
+            margin: 0;Ï
+            transition: padding-top 0.3s ease; /* Add transition for smoother effect */
+        }
 li.s-language-switcher {
     position: relative;
 }
@@ -576,6 +580,7 @@ form.hero-search input {
     background-color: #f5f5f6;
     justify-content: center;
     overflow:hidden;
+    transition: transform 0.3s ease;
 }
 
 
@@ -586,6 +591,8 @@ form.hero-search input {
     width: 100%;
     left: 0;
     right: 0;
+                transform: translateY(0);
+
 }
 
 /* iOS Safari specific fixes for a fixed sidebar */
