--- a/MarketSplash_ Financial Terms Dictionary_files/style.css
+++ b/MarketSplash_ Financial Terms Dictionary_files/style.css
@@ -1,7 +1,7 @@
 body {
             margin: 0;Ï
             transition: padding-top 0.3s ease; /* Add transition for smoother effect */
-            background: red;
+            background: green;
         }
 li.s-language-switcher {
     position: relative;
@@ -596,6 +596,16 @@ position: sticky;
                 transform: translateY(0);
             backface-visibility: hidden; 
 
+            overflow: hidden;
+            background-color: #333;
+            transition: transform 0.3s ease; /* Add transition for smoother effect */
+            position: absolute;
+            width: 100%;
+            box-sizing: border-box;
+            top: 0;
+            left: 0;
+            right: 0;
+
 }
 
 /* iOS Safari specific fixes for a fixed sidebar */
@@ -610,7 +620,16 @@ position: sticky;
         
     width: 100%;
     left: 0;
-    right: 0;Ï
+    right: 0;
+                 overflow: hidden;
+            background-color: #333;
+            transition: transform 0.3s ease; /* Add transition for smoother effect */
+            position: absolute;
+            width: 100%;
+            box-sizing: border-box;
+            top: 0;
+            left: 0;
+            right: 0;
     }
 }
 /* iOS Safari specific fixes for a fixed sidebar */
