--- a/MarketSplash_ Financial Terms Dictionary_files/style.css
+++ b/MarketSplash_ Financial Terms Dictionary_files/style.css
@@ -1,5 +1,5 @@
 body {
-            margin: 0;Ï
+            margin: 0;
             transition: padding-top 0.3s ease; /* Add transition for smoother effect */
             background: gray;
         }
