--- a/MarketSplash_ Financial Terms Dictionary_files/style.css
+++ b/MarketSplash_ Financial Terms Dictionary_files/style.css
@@ -1,8 +1,9 @@
 body {
-            margin: 0;
-            transition: padding-top 0.3s ease; /* Add transition for smoother effect */
-            background: orange;
-        }
+    margin: 0;
+    transition: padding-top 0.3s ease;
+    /* Add transition for smoother effect */
+}
+
 li.s-language-switcher {
     position: relative;
 }
@@ -573,28 +574,29 @@ form.hero-search input {
 .filter-content {
     position: relative;
 }
+
 .alphabet-list {
-    display: inline;
-/*     flex-wrap: wrap; */
+    display: flex;
+    flex-wrap: wrap;
     list-style: none;
     padding: 0;
     margin: 0;
     margin-bottom: 30px;
     background-color: #f5f5f6;
     justify-content: center;
-    overflow:hidden;
+    overflow: hidden;
     transition: transform 0.3s ease;
 }
 
 
 @keyframes slideInDown {
     from {
-        transform: translate3d(0,-100%,0);
+        transform: translate3d(0, -100%, 0);
         visibility: visible
     }
 
     to {
-        transform: translate3d(0,0,0)
+        transform: translate3d(0, 0, 0)
     }
 }
 
